--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tvStreetName"
             android:layout_alignParentStart="true"
+            android:layout_marginStart="5dp"
             android:layout_marginEnd="16dp"
             android:text="@string/button_solution"/>
 
