--- a/app/src/main/res/layout/activity_starter.xml
+++ b/app/src/main/res/layout/activity_starter.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        tools:background="@drawable/bg_main"/>
+        tools:background="@drawable/bg_main"
+        tools:ignore="ContentDescription"/>
 
     <LinearLayout
         android:layout_width="match_parent"
