--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -81,6 +81,26 @@
         android:padding="8dp"
         android:src="@drawable/ic_action_more_vert"/>
 
+    <TextView
+        android:id="@+id/tvPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@id/btnMore"
+        android:layout_alignBottom="@id/btnMore"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_toStartOf="@id/btnMore"
+        android:background="@drawable/bg_accent_rounded"
+        android:gravity="center"
+        android:paddingStart="8dp"
+        android:paddingTop="6dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="6dp"
+        android:text="0"
+        android:textColor="@color/white"
+        tools:ignore="HardcodedText"/>
+
     <RelativeLayout
         android:id="@+id/rlSuccess"
         android:layout_width="match_parent"
