--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -45,7 +45,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/button_solution"/>
+            android:text="@string/button_solution"
+            android:textColor="@color/semiWhite"/>
 
         <Button
             android:id="@+id/btnNext"
