#13: Removed unused methods. Moved heavy loading to a background thread.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorError">#b71c1c</color>
     <color name="white">#ffffff</color>
     <color name="semiWhite">#7affffff</color>
+    <color name="mapBackground">#1d2c4d</color>
 </resources>
