--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -70,6 +70,21 @@
         android:layout_above="@id/rlStatus"
         tools:context=".MapsActivity"/>
 
+    <RelativeLayout
+        android:id="@+id/rlLoading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/rlStatus"
+        android:background="@color/mapBackground">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"/>
+
+    </RelativeLayout>
+
     <ImageView
         android:id="@+id/btnMore"
         android:layout_width="wrap_content"
