--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,13 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.District" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/mapColorPrimary</item>
+        <item name="colorPrimaryDark">@color/mapColorPrimaryDark</item>
+        <item name="colorAccent">@color/mapColorAccent</item>
+        <item name="android:windowBackground">@color/mapColorBackground</item>
+    </style>
+
     <style name="Starter">
         <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
