--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -124,20 +124,16 @@
         android:layout_alignTop="@id/btnMore"
         android:layout_alignBottom="@id/btnMore"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
         android:drawableEnd="@drawable/ic_edit_12dp"
         android:drawablePadding="12dp"
         android:foreground="?android:selectableItemBackground"
         android:gravity="center"
         android:paddingStart="8dp"
-        android:paddingTop="6dp"
         android:paddingEnd="8dp"
-        android:paddingBottom="6dp"
         android:text="Graz"
         android:textColor="@color/white"
-        android:textSize="@dimen/text_medium"
+        android:textSize="@dimen/text_large"
         tools:ignore="HardcodedText"/>
 
     <RelativeLayout
