#14: Fix issue where a round would not be started at the first app launch.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/padding_large"
+        android:layout_marginTop="@dimen/padding_maps"
         android:layout_marginEnd="8dp"
         android:foreground="?android:selectableItemBackgroundBorderless"
         android:padding="8dp"
@@ -124,6 +124,7 @@
         android:layout_alignTop="@id/btnMore"
         android:layout_alignBottom="@id/btnMore"
         android:layout_alignParentStart="true"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
         android:drawableEnd="@drawable/ic_edit_12dp"
         android:drawablePadding="12dp"
