--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -147,6 +147,7 @@
         android:visibility="invisible">
 
         <TextView
+            android:id="@+id/tvSuccess"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/quiz_result_success_1"
