--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,12 @@
         <item name="android:textSize">@dimen/text_medium</item>
     </style>
 
+    <style name="Starter.Beta">
+        <item name="android:textSize">@dimen/text_small</item>
+        <item name="android:gravity">end</item>
+        <item name="android:background">@drawable/bg_green_fully_rounded</item>
+    </style>
+
     <style name="Starter.Heading">
         <item name="android:textSize">@dimen/text_huge</item>
     </style>
