#28: Semi-hardcoded city thumb.

--- a/app/src/main/res/layout/item_district.xml
+++ b/app/src/main/res/layout/item_district.xml
@@ -16,8 +16,8 @@
             android:id="@+id/ivBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bg_district" />
+            android:background="@color/mapBackground"
+            android:scaleType="centerCrop" />
 
         <ProgressBar
             android:id="@+id/progress"
